--- a/_posts/2023-05-28-gardens.markdown
+++ b/_posts/2023-05-28-gardens.markdown
@@ -16,16 +16,26 @@ We have recently created our own home garden, the first after moving last year. 
 
 This made me think of the other forms of gardens in more urbanised spaces, including balcony gardens and community gardens. Community gardens are of huge benefit to society, especially in those densely populated areas were neighbours rarely socialise.
 
-## Fostering Community and Social Interaction:
+# Fostering Community and Social Interaction:
 
-1. **Collaborative Gardening:** Community gardens bring people together, fostering a sense of camaraderie and cooperation. Neighbours can work collectively, sharing knowledge, tools, and resources. This creates a vibrant social hub where individuals from different backgrounds come together, strengthening community bonds.
-2. **Inter-Generational Connections:** Gardens offer a space for people, of all ages, to connect and learn from one another. Children, adults, and seniors can collaborate, exchanging gardening wisdom, stories, and experiences. This inter-generational interaction helps to builds empathy, understanding, and a sense of belonging.
-3. **Community Events:** Community gardens often organise events, such as workshops, gardening classes, and harvest festivals as well as providing green space for community get togethers and barbecues. These gatherings provide opportunities for education, skill-sharing, and celebration, enhancing community engagement and solidarity.
+### Collaborative Gardening
+Community gardens bring people together, fostering a sense of camaraderie and cooperation. Neighbours can work collectively, sharing knowledge, tools, and resources. This creates a vibrant social hub where individuals from different backgrounds come together, strengthening community bonds.
 
-## Sustainable Living:
+### Inter-Generational Connections
+Gardens offer a space for people, of all ages, to connect and learn from one another. Children, adults, and seniors can collaborate, exchanging gardening wisdom, stories, and experiences. This inter-generational interaction helps to builds empathy, understanding, and a sense of belonging.
 
-1. **Food Availability:** Community gardens contribute to food availability by providing access to fresh, affordable, and locally grown produce. They empower individuals and communities to take control of their food sources, reducing dependence on distant supply chains and increasing self-sufficiency, whilst also mitigating the environmental impacts of food supply chains.
-2. **Conservation and Environmental Awareness:** Gardens promote environmentally friendly practices such as composting, water conservation, and organic gardening techniques. They serve as showcases for sustainable living, inspiring others to adopt greener lifestyles.
-3. **Urban Heat Island Mitigation:** Green spaces, including community gardens, mitigate the urban heat island effect by reducing surface temperatures and improving air quality. They act as cooling agents, creating healthier and more liveable urban environments.
+### Community Events
+Community gardens often organise events, such as workshops, gardening classes, and harvest festivals as well as providing green space for community get togethers and barbecues. These gatherings provide opportunities for education, skill-sharing, and celebration, enhancing community engagement and solidarity.
+
+# Sustainable Living
+
+### Food Availability
+Community gardens contribute to food availability by providing access to fresh, affordable, and locally grown produce. They empower individuals and communities to take control of their food sources, reducing dependence on distant supply chains and increasing self-sufficiency, whilst also mitigating the environmental impacts of food supply chains.
+
+### Conservation and Environmental Awareness
+Gardens promote environmentally friendly practices such as composting, water conservation, and organic gardening techniques. They serve as showcases for sustainable living, inspiring others to adopt greener lifestyles.
+
+### Urban Heat Island Mitigation
+Green spaces, including community gardens, mitigate the urban heat island effect by reducing surface temperatures and improving air quality. They act as cooling agents, creating healthier and more liveable urban environments.
 
 Home and community gardens hold immense potential to transform societies by nurturing connections, promoting sustainable practices, and empowering individuals with essential skills. Whether you tend to your own garden or actively participate in a community gardening initiative, the benefits extend far beyond the individual. These green spaces bring people together, boost environmental consciousness, and improve the overall well-being of communities. So, let's embrace the power of gardens and cultivate a more vibrant, sustainable, and interconnected world.
