--- a/_posts/2023-05-28-gardens.markdown
+++ b/_posts/2023-05-28-gardens.markdown
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:  "Automating our Home"
+title:  "The Benefits of Gardens"
 date:   2023-05-28 16:00:00 +1000
 primary_image: "https://images.unsplash.com/photo-1529313780224-1a12b68bed16?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1287&q=80"
-category: Technology
+category: Home Garden
 permalink: /social-gardens
 ---
 
